# da_project2

./: .gitignore  CMakeLists.txt  Doxyfile  exercises.cpp  exercises.h  main.cpp  menu.cpp  menu.h
DataTypes/: pallet.cpp  pallet.h  truck.cpp  truck.h
Reader/: Reader.cpp  Reader.h
html/: _reader_8cpp.html  _reader_8h.html  _reader_8h_source.html  annotated.html  annotated_dup.js  class_exerciser-members.html  class_exerciser.html  class_exerciser.js  class_pallet-members.html  class_pallet.html  class_pallet.js  class_reader-members.html  class_reader.html  class_reader.js  class_truck-members.html  class_truck.html  class_truck.js  classes.html  classmenu-members.html  classmenu.html  classmenu.js  dir_7605c4a629899c5f0b7b917d0db6074d.html  dir_7605c4a629899c5f0b7b917d0db6074d.js  dir_7f53e8b9a26c793ab5dfdc995fbc5424.html  dir_7f53e8b9a26c793ab5dfdc995fbc5424.js  doxygen_crawl.html  exercises_8cpp.html  exercises_8cpp.js  exercises_8h.html  exercises_8h.js  exercises_8h_source.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  menu_8h_source.html  navtreedata.js  navtreeindex0.js  pallet_8h.html  (+7 more)
html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  (+11 more)
latex/: _reader_8cpp.tex  _reader_8h.tex  _reader_8h_source.tex  annotated.tex  class_exerciser.tex  class_pallet.tex  class_reader.tex  class_truck.tex  classmenu.tex  exercises_8cpp.tex  exercises_8h.tex  exercises_8h_source.tex  files.tex  menu_8h_source.tex  pallet_8h.tex  pallet_8h_source.tex  refman.tex  struct_individual.tex  truck_8h.tex  truck_8h_source.tex
